--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+server.port=5000
+#database
+spring.datasource.url=jdbc:postgresql://localhost:5432/online_market
+spring.datasource.username=postgres
+spring.datasource.password=orlando123
