"Fix 005 add config - dependencies"

--- a/api_order/src/main/resources/application.properties
+++ b/api_order/src/main/resources/application.properties
@@ -9,6 +9,10 @@ spring.datasource.initialization-mode= always
 #cuando creo objetos me va mostrar el SQL
 spring.jpa.show-sql=true
 #crea la tablas a partir de una entidad
-spring.jpa.hibernate.ddl-auto= create-drop 
+spring.jpa.hibernate.ddl-auto=create-drop 
 #indicamos el nivel de log que mostraremos en la aplicacion
-logging.level.root= INFO
+logging.level.root=INFO
+#formato de fecha
+config.dateTimeFormat=dd/MM/yy hh:mm:ss
+#scret key spring security
+jwt.secret-key=stacklyCode
